src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Terms proposed by the user</description>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Due On Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_Detail__c</fullName>
        <label>Platform Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Designation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Specified</fullName>
                </value>
                <value>
                    <fullName>Accommodation Ship</fullName>
                </value>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Alcohol Tanker</fullName>
                </value>
                <value>
                    <fullName>Anchor Handling Tug Supply</fullName>
                </value>
                <value>
                    <fullName>Anchor Handling Vessel</fullName>
                </value>
                <value>
                    <fullName>Asphalt/Bitumen Tanker</fullName>
                </value>
                <value>
                    <fullName>Beer Tanker</fullName>
                </value>
                <value>
                    <fullName>Bitumen Tanker</fullName>
                </value>
                <value>
                    <fullName>Bulk Cement Carrier</fullName>
                </value>
                <value>
                    <fullName>Bulk Cement Storage Ship</fullName>
                </value>
                <value>
                    <fullName>Bulk Dry Storage Ship</fullName>
                </value>
                <value>
                    <fullName>Bunkering Tanker</fullName>
                </value>
                <value>
                    <fullName>Buoy/Lighthouse Vessel</fullName>
                </value>
                <value>
                    <fullName>Buoy &amp; Lighthouse Tender</fullName>
                </value>
                <value>
                    <fullName>Cable Layer</fullName>
                </value>
                <value>
                    <fullName>Caprolactam Tanker</fullName>
                </value>
                <value>
                    <fullName>Chemical/Oil Products Tanker</fullName>
                </value>
                <value>
                    <fullName>Chemical/Products Tanker</fullName>
                </value>
                <value>
                    <fullName>Chemical Tanker</fullName>
                </value>
                <value>
                    <fullName>CO2 Tanker</fullName>
                </value>
                <value>
                    <fullName>Coal/Oil Mixture Tanker</fullName>
                </value>
                <value>
                    <fullName>Container Ship (Fully Cellular)</fullName>
                </value>
                <value>
                    <fullName>Crane Ship</fullName>
                </value>
                <value>
                    <fullName>Crew/Supply Vessel</fullName>
                </value>
                <value>
                    <fullName>Crew Boat</fullName>
                </value>
                <value>
                    <fullName>Crude/Oil Products Tanker</fullName>
                </value>
                <value>
                    <fullName>Crude Oil Tanker</fullName>
                </value>
                <value>
                    <fullName>Cruiser</fullName>
                </value>
                <value>
                    <fullName>Cruise Ship/Ocean Liner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Billing_Day__c</fullName>
        <description>The preferred Billing Day for this Order.</description>
        <inlineHelpText>Some calendar months don&apos;t have the 30th or the 31st day. If you select 31 as the day for invoicing and the current month has only 30 days,30 will be used instead.</inlineHelpText>
        <label>Preferred Billing Day of the month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Name_s__c</fullName>
        <label>Previous Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <description>The values for this Picklist and it&apos;s dependencies are provided by Marketing.
The values in this picklist should exactly match the values in: 
Campaign.Product_Focus__c
Lead.Product_Interest__c 
Account.Product_Interest_2__c</description>
        <label>Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market_Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NVOD</fullName>
                </value>
                <value>
                    <fullName>Rental Library</fullName>
                </value>
                <value>
                    <fullName>TrainingLink_Walport</fullName>
                </value>
                <value>
                    <fullName>Training Titles</fullName>
                </value>
                <value>
                    <fullName>VOA (Videotel OnLine Assessment)</fullName>
                </value>
                <value>
                    <fullName>VOD</fullName>
                </value>
                <value>
                    <fullName>VOD Additonal Titles</fullName>
                </value>
                <value>
                    <fullName>VOD Online</fullName>
                </value>
                <value>
                    <fullName>webFSA</fullName>
                </value>
                <value>
                    <fullName>webFTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_Interest__c</fullName>
        <description>The values for this Picklist and it&apos;s dependencies are provided by Marketing.
            The values in this picklist should exactly match the values in:
            Campaign.Product_Line_Interest__c
            Lead.Product_Line_Interest__c
            Account.Product_Line_Interest__c</description>
        <label>Product Line Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audio Services</fullName>
                </value>
                <value>
                    <fullName>DVD Services</fullName>
                </value>
                <value>
                    <fullName>Network Mgmt</fullName>
                </value>
                <value>
                    <fullName>News Services</fullName>
                </value>
                <value>
                    <fullName>Satellite Communications</fullName>
                </value>
                <value>
                    <fullName>Satellite Content Delivery - Entertainment</fullName>
                </value>
                <value>
                    <fullName>Satellite Content Delivery - Operations</fullName>
                </value>
                <value>
                    <fullName>Satellite TV</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Type__c</fullName>
        <description>Part of SFT Changes</description>
        <inlineHelpText>This the of Prospect Account Type.</inlineHelpText>
        <label>Account Type (Prospect)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_Statements__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receive Statements</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Hidden__c</fullName>
        <label>Record Type (Hidden)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refit_Year__c</fullName>
        <label>Refit Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Owner_Location__c</fullName>
        <label>Registered Owner Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Owner__c</fullName>
        <label>Registered Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Partner__c</fullName>
        <inlineHelpText>Select the Partners that this Account will be shared with in the Partner Community.</inlineHelpText>
        <label>Sales Agent / Partner Sharing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beijing Shipping Business Tech</fullName>
                </value>
                <value>
                    <fullName>D4 Dynamics GmbH</fullName>
                </value>
                <value>
                    <fullName>Egyptian Maritime Bureau</fullName>
                </value>
                <value>
                    <fullName>IMC Group P.C.</fullName>
                </value>
                <value>
                    <fullName>ISM Solutions Inc</fullName>
                </value>
                <value>
                    <fullName>Marcas Limited</fullName>
                </value>
                <value>
                    <fullName>MCTC Marine Ltd</fullName>
                </value>
                <value>
                    <fullName>Multimedia HRD Pvt. Ltd.</fullName>
                </value>
                <value>
                    <fullName>Nautibond C.A.</fullName>
                </value>
                <value>
                    <fullName>Nautical Training Systems Inc</fullName>
                </value>
                <value>
                    <fullName>North Coast Maritime Consulting</fullName>
                </value>
                <value>
                    <fullName>R &amp; R International</fullName>
                </value>
                <value>
                    <fullName>Scanocean Services Inc.</fullName>
                </value>
                <value>
                    <fullName>Spark International Co Ltd.</fullName>
                </value>
                <value>
                    <fullName>Spectral Technologies Inc,</fullName>
                </value>
                <value>
                    <fullName>Test Sales Agent Partner</fullName>
                </value>
                <value>
                    <fullName>Winwell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>This field represents Sales office with which the account is associated. It provides a means for summary reporting by each particular Sales office. This Picklist should always match the corresponding Picklist in the Lead Object</description>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KV UK</fullName>
                </value>
                <value>
                    <fullName>KV ASIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SeaWeb_Call_Sign__c</fullName>
        <formula>Vessel_Radio_Call_Sign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SeaWeb Call Sign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeaWeb_Flag__c</fullName>
        <description>This is the Vessel&apos;s flag as recorded in SeaWeb</description>
        <inlineHelpText>This field is only to be populated with a value from SeaWeb</inlineHelpText>
        <label>SeaWeb Flag</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeaWeb_MMSI__c</fullName>
        <formula>MMSI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SeaWeb MMSI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeaWeb_Vessel_IMO__c</fullName>
        <formula>Vessel_IMO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SeaWeb Vessel IMO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeaWeb_Vessel_Status__c</fullName>
        <label>SeaWeb Vessel Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SeaWeb_Vessel_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <description>An alternate general phone number for the account</description>
        <inlineHelpText>Enter an alternative Phone Number. For Commercial Vessels this may be the Secondary System Phone Number.</inlineHelpText>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sent_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Type__c</fullName>
        <description>Used for Platform Record Types, Maps to Sea-Web field</description>
        <label>Ship Type</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Name__c</fullName>
        <inlineHelpText>For automated statements...  Do not touch</inlineHelpText>
        <label>Snapshot Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Service_Requirements__c</fullName>
        <description>Created as a text fireld for KC Repairs. This may be extended for other teams as necessary.</description>
        <inlineHelpText>Enter Special Service Details that will be used initially for KC Service Cases</inlineHelpText>
        <label>Special Service Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subscription_Value__c</fullName>
        <inlineHelpText>Potential Subscription Value Prospect Account only</inlineHelpText>
        <label>Subscription Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suspension_Date__c</fullName>
        <label>Suspension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Manager_Location__c</fullName>
        <label>Technical Manager Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Manager__c</fullName>
        <label>Technical Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Delivery__c</fullName>
        <label>Terms of Delivery</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <label>Terms of Payment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalInvoiceValue__c</fullName>
        <description>It will calculate the SUM of the Invoice&apos;s.</description>
        <inlineHelpText>SUM of the Invoice&apos;s on this account</inlineHelpText>
        <label>Total Invoice Value</label>
        <summarizedField>Invoice__c.Total_Invoice_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_Status__c</field>
            <operation>equals</operation>
            <value>Draft, Posted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice__c.Invoice_State__c</field>
            <operation>equals</operation>
            <value>Regular,</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalOrderValue__c</fullName>
        <description>Sum of Orders on this Account</description>
        <inlineHelpText>Sum of orders on this account</inlineHelpText>
        <label>Total Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalQuoteValue__c</fullName>
        <description>Sum of Quotes on this Account</description>
        <inlineHelpText>Sum of quotes on this account</inlineHelpText>
        <label>Total Quote Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Unallocated_Payment__c</fullName>
        <description>Indicates the customer credit - all the unallocated payments against this customer.</description>
        <inlineHelpText>Indicates the customer credit - all the unallocated payments against this customer.</inlineHelpText>
        <label>Customer Credit</label>
        <summarizedField>Payment__c.Unallocated_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Initiated, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VAT_No__c</fullName>
        <description>This field will manually populates when the customer is using VAT/Tax  numbers for their 
business/products</description>
        <label>Customer VAT / Tax No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vat_Code__c</fullName>
        <label>Vat Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vessel_Description__c</fullName>
        <description>Used for Platform Record Types</description>
        <label>Vessel Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vessel_Email__c</fullName>
        <description>Used for Platform Record Types</description>
        <label>Vessel E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vessel_IMO__c</fullName>
        <description>Used for Platform Record Types, Maps to Sea-Web field. Might be used as a Foreign Key</description>
        <inlineHelpText>This is the vessels IMO# as reported on the activation form. Used as a primary key to collect SeaWeb data.</inlineHelpText>
        <label>Vessel IMO #</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vessel_Length_ft_m__c</fullName>
        <description>Used for Platform Record Types</description>
        <label>Vessel Length – ft (m)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>≤ 20 ft (6m)</fullName>
                </value>
                <value>
                    <fullName>20-30 ft (6-9 m)</fullName>
                </value>
                <value>
                    <fullName>30-40 ft (9-12 m)</fullName>
                </value>
                <value>
                    <fullName>40-60 ft (12-18 m)</fullName>
                </value>
                <value>
                    <fullName>60-80 ft (18-24 m)</fullName>
                </value>
                <value>
                    <fullName>&gt; 80 ft (24m)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vessel_Make_Builder__c</fullName>
        <description>Used for Platform Record Types</description>
        <label>Vessel Make/Builder</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vessel_Radio_Call_Sign__c</fullName>
        <description>Used for Platform Record Types</description>
        <label>Vessel Radio Call Sign</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Videotel_Legal_Entity__c</fullName>
        <description>This was implemented as part of Cutoff.</description>
        <inlineHelpText>Create a new Legal Entity field that can be managed for Account General Legal Entity.</inlineHelpText>
        <label>Videotel Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VMA</fullName>
                </value>
                <value>
                    <fullName>VMI</fullName>
                </value>
                <value>
                    <fullName>VOA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Account_Number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Beijing_Shipping_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Customer_Account_Number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KV_Sales_Agent__c</field>
            <operation>startsWith</operation>
            <value>Beijing Shipping</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KV_Customers</value>
        </filters>
        <label>Beijing Shipping Customer Accounts</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Beijing_Shipping_PlatformAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Vessel_IMO__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KV_Platform</value>
        </filters>
        <filters>
            <field>KV_Sales_Agent__c</field>
            <operation>startsWith</operation>
            <value>Beijing Shipping</value>
        </filters>
        <label>Beijing Shipping Platform Accounts</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>D4_Dynamics_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Customer_Account_Number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KV_Sales_Agent__c</field>
            <operation>equals</operation>
            <value>D4 Dynamics GmbH</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KV_Customers</value>
        </filters>
        <label>D4 Dynamics Customer Accounts</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
            <portalRole>D4DynamicsGmbHPartnerUser</portalRole>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>D4_Dynamics_Platform_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Vessel_IMO__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KV_Platform</value>
        </filters>
        <label>D4 Dynamics Platform Accounts</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>KV_Support</group>
            <group>Salesforce_Admins</group>
            <portalRole>D4DynamicsGmbHPartnerUser</portalRole>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Egyptian_Maritime_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Customer_Account_Number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KV_Sales_Agent__c</field>
            <operation>startsWith</operation>
            <value>Egyptian Maritime,IMC</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KV_Customers</value>
        </filters>
        <label>Egyptian Maritime Customer Accounts</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Egyptian_Maritime_Platform_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Vessel_IMO__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KV_Sales_Agent__c</field>
            <operation>startsWith</operation>
            <value>Egyptian Maritime,IMC</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KV_Platform</value>
        </filters>
        <label>Egyptian Maritime Platform Accounts</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IMC_Group_P_C_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Customer_Account_Number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KV_Sales_Agent__c</field>
            <operation>startsWith</operation>
            <value>IMC Group</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KV_Customers</value>
        </filters>
        <label>IMC Group P.C. Customer Accounts</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IMC_Group_P_C_Platform_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Vessel_IMO__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KV_Sales_Agent__c</field>
            <operation>startsWith</operation>
            <value>IMC Group P.C.</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KV_Platform</value>
        </filters>
        <label>IMC Group P.C. Platform Accounts</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ISM_Solutions_Inc_Customer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Customer_Account_Number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KV_Sales_Agent__c</field>
            <operation>startsWith</operation>
            <value>ISM Solutions Inc</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KV_Customers</value>
        </filters>
        <label>ISM Solutions Inc Customer Accounts</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>KV_Sales</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
</CustomObject>